[gd_scene load_steps=2 format=3 uid="uid://fbdaha3edefc"]

[ext_resource type="Script" uid="uid://cobw6tjrrt3oh" path="res://settings.gd" id="1_settings"]

[node name="Settings" type="Node2D"]
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="Title" type="Label" parent="."]
offset_left = 396.0
offset_top = 50.0
offset_right = 733.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 48
text = "Настройки"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 50.0
offset_top = 50.0
offset_right = 150.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 24
text = "Назад"
flat = true

[node name="LanguageControl" type="VBoxContainer" parent="."]
offset_left = 396.0
offset_top = 150.0
offset_right = 733.0
offset_bottom = 250.0
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="LanguageControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Язык / Language"
horizontal_alignment = 1

[node name="LanguageOptions" type="HBoxContainer" parent="LanguageControl"]
layout_mode = 2
alignment = 1

[node name="RuButton" type="Button" parent="LanguageControl/LanguageOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Русский"
flat = true

[node name="EnButton" type="Button" parent="LanguageControl/LanguageOptions"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "English"
flat = true

[node name="DisplayControl" type="VBoxContainer" parent="."]
offset_left = 396.0
offset_top = 300.0
offset_right = 733.0
offset_bottom = 400.0

[node name="Label" type="Label" parent="DisplayControl"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 1, 1)
theme_override_font_sizes/font_size = 24
text = "Экран"
horizontal_alignment = 1

[node name="FullscreenCheck" type="CheckBox" parent="DisplayControl"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Полный экран"
